# Kinect-server

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh  main.cpp
api/: KinectApi.cpp  KinectApi.h
model/: Kinect.cpp  Kinect.h
